# ChangeLog for net-news/canto
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Jul 2008; Jack Miller (TheMoken) jack@codezen.org +canto-0.4.0.ebuild,
  +metadata.xml:
  First release.
